[gd_scene load_steps=17 format=3 uid="uid://dhr5epkvjl588"]

[ext_resource type="Script" path="res://Scripts/player_ship.gd" id="1_ekbhy"]
[ext_resource type="PackedScene" uid="uid://cw6nos06km7b3" path="res://Scenes/PlayerDroneDock.tscn" id="5_vcup0"]
[ext_resource type="AudioStream" uid="uid://18n3m3gw8twb" path="res://Assets/Sounds/turbine_01.wav" id="6_0t4kc"]
[ext_resource type="Script" path="res://Scripts/missile_dock.gd" id="9_dl1n1"]
[ext_resource type="Resource" uid="uid://cl8a6o13748s8" path="res://Resources/MissileDockEventHandler.tres" id="9_jx5d0"]
[ext_resource type="Texture2D" uid="uid://bhg24g7ywfqe8" path="res://Assets/Spaceship/Spaceship_top_2_Main Camera.png" id="18_elnvx"]
[ext_resource type="Texture2D" uid="uid://dic62egg7dtn4" path="res://Assets/smoke_02.png" id="20_8n1nj"]
[ext_resource type="Texture2D" uid="uid://b3g3ju4xwuygm" path="res://Assets/Light.png" id="20_hn8tc"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_vppi8"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_bweje"]
blend_mode = 1

[sub_resource type="Curve" id="Curve_gn3pm"]
_data = [Vector2(0, 0.297297), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_pgv80"]
curve = SubResource("Curve_gn3pm")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qn4ww"]
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 1.244
initial_velocity_max = 1.0
angular_velocity_min = -1.60933e-05
angular_velocity_max = 308.99
radial_velocity_min = -2.23517e-05
radial_velocity_max = -2.23517e-05
gravity = Vector3(0, 0, 0)
scale_min = 0.05
scale_max = 0.05
scale_curve = SubResource("CurveTexture_pgv80")

[sub_resource type="CircleShape2D" id="CircleShape2D_rjoek"]

[sub_resource type="CircleShape2D" id="CircleShape2D_42dgb"]
radius = 200.0

[sub_resource type="CircleShape2D" id="CircleShape2D_utfkb"]
radius = 1000.0

[node name="PlayerShip" type="Node2D" groups=["Ships"]]
material = SubResource("CanvasItemMaterial_vppi8")
position = Vector2(-90, 324)
script = ExtResource("1_ekbhy")
LowStatsToNotifyAbout = Array[String](["FUEL", "OXYGEN", "HP", "HULL"])

[node name="SmokeParticles" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_bweje")
position = Vector2(-7, 0)
amount = 50
process_material = SubResource("ParticleProcessMaterial_qn4ww")
texture = ExtResource("20_8n1nj")
lifetime = 20.0

[node name="ShipBody" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShipBody"]
shape = SubResource("CircleShape2D_rjoek")

[node name="Radar" type="Area2D" parent="."]
disable_mode = 2
collision_layer = 16385
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Radar"]
shape = SubResource("CircleShape2D_42dgb")

[node name="Elint" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16384
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Elint"]
shape = SubResource("CircleShape2D_utfkb")

[node name="MissileDock" type="Node2D" parent="."]
script = ExtResource("9_dl1n1")
MissileDockEventH = ExtResource("9_jx5d0")

[node name="MissileLine" type="Line2D" parent="MissileDock"]
z_index = 2
material = SubResource("CanvasItemMaterial_vppi8")
points = PackedVector2Array(0, 0, 10, 0)
default_color = Color(0.908948, 0.280129, 0.164634, 1)

[node name="DroneDock" parent="." instance=ExtResource("5_vcup0")]
collision_layer = 4096

[node name="PlayerShipSpr" type="Sprite2D" parent="."]
rotation = -1.5708
texture = ExtResource("18_elnvx")

[node name="ShadowPivot" type="Node2D" parent="PlayerShipSpr"]
show_behind_parent = true

[node name="Shadow" type="Sprite2D" parent="PlayerShipSpr/ShadowPivot"]
modulate = Color(0, 0, 0, 0.5)
show_behind_parent = true
position = Vector2(-20, -20)
texture = ExtResource("18_elnvx")

[node name="Aceleration" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_0t4kc")
volume_db = -10.0
bus = &"Engine"

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 0.25
shadow_color = Color(0.767, 0, 0.373, 1)
texture = ExtResource("20_hn8tc")
texture_scale = 4.0
height = 200.0
